increasing the jvm resources for spark test cases